<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="addItemViewModel"
            type="com.example.mymedialist.additem.AddItemViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/movie_cover"
            android:layout_width="133dp"
            android:layout_height="190dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="225dp"
            android:layout_height="75dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/movie_cover"
            app:layout_constraintTop_toTopOf="@+id/movie_cover"
            tools:text="Movie Title" />

        <TextView
            android:id="@+id/release_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/release_year"
            app:layout_constraintStart_toEndOf="@+id/movie_cover"
            app:layout_constraintTop_toBottomOf="@+id/movie_title" />

        <TextView
            android:id="@+id/release_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@+id/release_date_text"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"
            tools:text="yyyy-mm--dd" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_cover"
            tools:text="@string/description_text" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="31dp"
            android:onClick="@{() -> addItemViewModel.addButtonPressed()}"
            android:text="@string/add_button_text"
            app:layout_constraintBottom_toTopOf="@+id/description_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toEndOf="@+id/movie_cover"
            app:layout_constraintTop_toBottomOf="@+id/release_date_text"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/seen_on_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/seen_on"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_text" />

        <TextView
            android:id="@+id/seen_on_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toEndOf="@+id/seen_on_date_text"
            app:layout_constraintTop_toBottomOf="@+id/description_text"
            tools:text="yyyy-mm-dd" />

        <Button
            android:id="@+id/set_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> addItemViewModel.setDateButtonPressed()}"
            android:text="@string/set_date"
            app:layout_constraintStart_toEndOf="@+id/seen_on_date_text"
            app:layout_constraintTop_toBottomOf="@+id/description_text" />

        <TextView
            android:id="@+id/rating_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:text="@string/rating_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_date_button" />

        <TextView
            android:id="@+id/rating_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toEndOf="@+id/rating_text"
            app:layout_constraintTop_toBottomOf="@+id/set_date_button"
            tools:text=" x / 10" />

        <Button
            android:id="@+id/set_rating_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="32dp"
            android:text="@string/set_rating_button_text"
            app:layout_constraintStart_toEndOf="@+id/seen_on_date_text"
            app:layout_constraintTop_toBottomOf="@+id/set_date_button"
            android:onClick="@{() -> addItemViewModel.numberPickerPressed()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>