<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="movieDetailsViewModel"
            type="com.example.mymedialist.details.MovieDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_cover"
            android:layout_width="144dp"
            android:layout_height="206dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_dialog" />

        <TextView
            android:id="@+id/movie_title_text"
            android:layout_width="217dp"
            android:layout_height="84dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@{movieDetailsViewModel.selectedMovie.title}"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_cover"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Movie Title" />

        <TextView
            android:id="@+id/release_year_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/release_year"
            app:layout_constraintStart_toEndOf="@+id/image_cover"
            app:layout_constraintTop_toBottomOf="@+id/movie_title_text" />

        <TextView
            android:id="@+id/release_year_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/release_year_text"
            app:layout_constraintTop_toBottomOf="@+id/movie_title_text"
            tools:text="release year"
            android:text="@{movieDetailsViewModel.selectedMovie.releaseYear.toString()}"/>

        <TextView
            android:id="@+id/last_seen_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/seen_on"
            app:layout_constraintStart_toEndOf="@+id/image_cover"
            app:layout_constraintTop_toBottomOf="@+id/release_year_text" />

        <TextView
            android:id="@+id/last_seen_on_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/last_seen_details"
            app:layout_constraintTop_toBottomOf="@+id/release_year_text"
            tools:text="dd/mm/yyyy"
            android:text="@{movieDetailsViewModel.selectedMovie.seenOnDate.toString()}"/>

        <TextView
            android:id="@+id/description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{movieDetailsViewModel.selectedMovie.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_cover"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam magna ipsum, congue consequat ipsum quis, porttitor fringilla sapien. Praesent at nulla sit amet nibh tempus varius. Nullam eu arcu eget enim porttitor vulputate. Integer vulputate non odio eget vestibulum. Donec lobortis pretium volutpat. Praesent hendrerit sagittis mauris et rutrum. Nunc eu diam at orci molestie malesuada sit amet..." />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> movieDetailsViewModel.onOkButtonClick()}"
            android:text="@string/ok_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_text"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/rating_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/rating_text"
            app:layout_constraintStart_toEndOf="@+id/image_cover"
            app:layout_constraintTop_toBottomOf="@+id/last_seen_details" />

        <TextView
            android:id="@+id/user_rating_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/rating_text_view"
            app:layout_constraintTop_toBottomOf="@+id/last_seen_on_date"
            tools:text="x / 10" />

        <Button
            android:id="@+id/edit_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:text="@string/edit_date_button_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_text"
            android:onClick="@{() -> movieDetailsViewModel.onEditDateButtonClick()}"/>

        <Button
            android:id="@+id/edit_rating_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="64dp"
            android:text="@string/edit_rating_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_text"
            android:onClick="@{() -> movieDetailsViewModel.onEditRatingButtonClick()}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>